--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "start": "node src/app.js"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "request": "^2.88.2",
-    "hbs": "^4.1.1"
-
+    "hbs": "^4.1.1",
+    "request": "^2.88.2"
   }
 }
