--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/app.js -e js,hbs",
     "start": "node src/app.js"
   },
   "keywords": [],
@@ -13,5 +14,8 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
